@@ -57,12 +57,12 @@ import org.openremote.model.util.ValueUtil;
 import org.openremote.model.value.MetaItemType;
 import org.postgresql.util.PGobject;
 
-import javax.persistence.EntityManager;
-import javax.persistence.NoResultException;
-import javax.persistence.Query;
-import javax.persistence.TypedQuery;
-import javax.validation.ConstraintViolation;
-import javax.validation.ConstraintViolationException;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.NoResultException;
+import jakarta.persistence.Query;
+import jakarta.persistence.TypedQuery;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
 import java.sql.*;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -75,10 +75,11 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static java.util.logging.Level.FINE;
 import static java.util.stream.Collectors.groupingBy;
 import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
 import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
-import static org.openremote.manager.event.ClientEventService.CLIENT_EVENT_TOPIC;
+import static org.openremote.manager.event.ClientEventService.CLIENT_INBOUND_QUEUE;
 import static org.openremote.model.attribute.Attribute.getAddedOrModifiedAttributes;
 import static org.openremote.model.query.AssetQuery.*;
 import static org.openremote.model.query.AssetQuery.Access.*;
@@ -168,7 +169,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
              String realm = requestRealm != null ? requestRealm : !isAnonymous ? auth.getAuthenticatedRealmName() : null;
 
              if (realm == null) {
-                 LOG.fine("Anonymous subscriptions must specify a realm");
+                 LOG.info("Anonymous AssetInfo subscriptions must specify a realm");
                  return false;
              }
 
@@ -253,7 +254,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     Predicate<Object> namePredicate = asPredicateOrTrue(currentMillisSupplier, attributePredicate.name);
                     Predicate<Object> valuePredicate = asPredicateOrTrue(currentMillisSupplier, attributePredicate.value);
                     List<Attribute<?>> matchedAttributes = asset.getAttributes().stream()
-                        .filter(attr -> namePredicate.test(attr.getName())).collect(Collectors.toList());
+                        .filter(attr -> namePredicate.test(attr.getName())).toList();
 
                     matches = true;
 
@@ -329,12 +330,12 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             if (event instanceof ReadAssetEvent readAssetEvent) {
                 if (readAssetEvent.getAssetQuery() == null) {
-                    LOG.fine("Read asset event must specify an asset ID");
+                    LOG.info("Read asset event must specify an asset ID");
                     return false;
                 }
             } else if (event instanceof ReadAttributeEvent readAttributeEvent) {
                 if (readAttributeEvent.getAssetQuery() == null) {
-                    LOG.fine("Read attribute event must specify an asset ID");
+                    LOG.info("Read attribute event must specify an asset ID");
                     return false;
                 }
             }
@@ -377,13 +378,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     public void configure() throws Exception {
         // If any asset was modified in the database, publish events
         from(PERSISTENCE_TOPIC)
-            .routeId("AssetPersistenceChanges")
+            .routeId("Persistence-Asset")
             .filter(isPersistenceEventForEntityType(Asset.class))
             .process(exchange -> publishModificationEvents(exchange.getIn().getBody(PersistenceEvent.class)));
 
         // React if a client wants to read assets and attributes
-        from(CLIENT_EVENT_TOPIC)
-            .routeId("FromClientReadRequests")
+        from(CLIENT_INBOUND_QUEUE)
+            .routeId("ClientInbound-Query")
             .filter(body().isInstanceOf(HasAssetQuery.class))
             .process(exchange -> {
                 HasAssetQuery hasAssetQuery = exchange.getIn().getBody(HasAssetQuery.class);
@@ -452,21 +453,21 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         if (!isSuperUser) {
             if (TextUtil.isNullOrEmpty(realm)) {
                 String msg = "Realm must be specified to read assets";
-                LOG.finer(msg);
+                LOG.finest(msg);
                 return false;
             }
 
             if (isAnonymous) {
                 if (query.access != null && query.access != PUBLIC) {
                     String msg = "Only public access allowed for anonymous requests";
-                    LOG.finer(msg);
+                    LOG.finest(msg);
                     return false;
                 }
                 query.access = PUBLIC;
             } else if (isRestricted) {
                 if (query.access == PRIVATE) {
                     String msg = "Only public or restricted access allowed for restricted requests";
-                    LOG.finer(msg);
+                    LOG.finest(msg);
                     return false;
                 }
                 if (query.access == null) {
@@ -476,13 +477,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             if (query.access != PUBLIC && !authContext.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID)) {
                 String msg = "User must have '" + ClientRole.READ_ASSETS.getValue() + "' role to read non public assets";
-                LOG.finer(msg);
+                LOG.finest(msg);
                 return false;
             }
 
             if (query.access != PUBLIC && !realm.equals(authContext.getAuthenticatedRealmName())) {
                 String msg = "Realm must match authenticated realm for non public access queries";
-                LOG.finer(msg);
+                LOG.finest(msg);
                 return false;
             }
 
@@ -495,7 +496,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         if (!identityService.getIdentityProvider().isRealmActiveAndAccessible(authContext, realm)) {
             String msg = "Realm is not present or is inactive";
-            LOG.finer(msg);
+            LOG.finest(msg);
             return false;
         }
 
@@ -562,12 +563,10 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     }
 
     public Asset<?> find(EntityManager em, AssetQuery query) {
+        query.limit = 1;
         List<Asset<?>> result = findAll(em, query);
-        if (result.size() == 0)
+        if (result.isEmpty())
             return null;
-        if (result.size() > 1) {
-            throw new IllegalArgumentException("Query returned more than one asset");
-        }
         return result.get(0);
     }
 
@@ -639,10 +638,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     @SuppressWarnings("unchecked")
     public <T extends Asset<?>> T merge(T asset, boolean overrideVersion, boolean skipGatewayCheck, String userName) throws IllegalStateException, ConstraintViolationException {
 
-        LOG.fine("Merging asset: " + asset);
+        if (LOG.isLoggable(Level.FINEST)) {
+            LOG.finest("Merging asset: " + asset);
+        }
 
         return persistenceService.doReturningTransaction(em -> {
 
+            long startTime = System.currentTimeMillis();
             String gatewayId = gatewayService.getLocallyRegisteredGatewayId(asset.getId(), asset.getParentId());
 
             if (!skipGatewayCheck && gatewayId != null) {
@@ -653,7 +655,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             // Validate realm
             if (asset.getRealm() == null) {
                 String msg = "Asset realm must be set : asset=" + asset;
-                LOG.fine(msg);
+                LOG.warning(msg);
                 throw new IllegalStateException(msg);
             }
 
@@ -674,18 +676,18 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 // Verify type has not been changed
                 if (!existingAsset.getType().equals(asset.getType())) {
                     String msg = "Asset type cannot be changed: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
 
                 if (!existingAsset.getRealm().equals(asset.getRealm())) {
                     String msg = "Asset realm cannot be changed: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
 
                 // Update timestamp on modified attributes this allows fast equality checking
-                asset.getAttributes().stream().forEach(attr -> {
+                asset.getAttributes().stream().forEach(attr ->
                     existingAsset.getAttribute(attr.getName()).ifPresent(existingAttr -> {
                         // If attribute is modified make sure the timestamp is also updated to allow simple equality
                         if (!attr.deepEquals(existingAttr) && attr.getTimestamp().orElse(0L) <= existingAttr.getTimestamp().orElse(0L)) {
@@ -693,8 +695,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                             // we will always ensure a delta of >= 1ms
                             attr.setTimestamp(Math.max(existingAttr.getTimestamp().orElse(0L)+1, timerService.getCurrentTimeMillis()));
                         }
-                    });
-                });
+                }));
 
                 // If this is real merge and desired, copy the persistent version number over the detached
                 // version, so the detached state always wins and this update will go through and ignore
@@ -706,13 +707,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             if (!identityService.getIdentityProvider().realmExists(asset.getRealm())) {
                 String msg = "Asset realm not found or is inactive: asset=" + asset;
-                LOG.fine(msg);
+                LOG.warning(msg);
                 throw new IllegalStateException(msg);
             }
 
             if (asset.getParentId() != null && asset.getParentId().equals(asset.getId())) {
                 String msg = "Asset parent cannot be the asset: asset=" + asset;
-                LOG.fine(msg);
+                LOG.warning(msg);
                 throw new IllegalStateException(msg);
             }
 
@@ -725,21 +726,21 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 // The parent must exist
                 if (parent == null) {
                     String msg = "Asset parent not found: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
 
                 // The parent can not be a child of the asset
                 if (parent.pathContains(asset.getId())) {
                     String msg = "Asset parent cannot be a descendant of the asset: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
 
                 // The parent should be in the same realm
                 if (!parent.getRealm().equals(asset.getRealm())) {
                     String msg = "Asset parent must be in the same realm: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
 
@@ -748,7 +749,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     String childAssetType = parent.getAttributes().getValue(GroupAsset.CHILD_ASSET_TYPE)
                         .orElseThrow(() -> {
                             String msg = "Asset parent is of type GROUP but the childAssetType attribute is invalid: asset=" + asset;
-                            LOG.fine(msg);
+                            LOG.warning(msg);
                             return new IllegalStateException(msg);
                         });
 
@@ -763,7 +764,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
                     if (!typeMatch) {
                         String msg = "Asset type does not match parent GROUP asset's childAssetType attribute: asset=" + asset;
-                        LOG.fine(msg);
+                        LOG.warning(msg);
                         throw new IllegalStateException(msg);
                     }
                 }
@@ -775,7 +776,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     .map(childAssetTypeString -> TextUtil.isNullOrEmpty(childAssetTypeString) ? null : childAssetTypeString)
                     .orElseThrow(() -> {
                         String msg = "Asset of type GROUP childAssetType attribute must be a valid string: asset=" + asset;
-                        LOG.fine(msg);
+                        LOG.warning(msg);
                         return new IllegalStateException(msg);
                     });
 
@@ -783,13 +784,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     .getChildAssetType()
                     .orElseThrow(() -> {
                         String msg = "Asset of type GROUP childAssetType attribute must be a valid string: asset=" + asset;
-                        LOG.fine(msg);
+                        LOG.warning(msg);
                         return new IllegalStateException(msg);
                     }) : childAssetType;
 
                 if (!childAssetType.equals(existingChildAssetType)) {
                     String msg = "Asset of type GROUP so childAssetType attribute cannot be changed: asset=" + asset;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
             }
@@ -809,12 +810,16 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 user = identityService.getIdentityProvider().getUserByUsername(asset.getRealm(), userName);
                 if (user == null) {
                     String msg = "User not found: " + userName;
-                    LOG.fine(msg);
+                    LOG.warning(msg);
                     throw new IllegalStateException(msg);
                 }
             }
 
             T updatedAsset = em.merge(asset);
+
+            if (LOG.isLoggable(FINE)) {
+                LOG.fine("Asset merge took: " + (System.currentTimeMillis() - startTime) + "ms");
+            }
 
             if (user != null) {
                 createUserAssetLinks(em, Collections.singletonList(new UserAssetLink(user.getRealm(), user.getId(), updatedAsset.getId())));
@@ -875,13 +880,11 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 return false;
             });
 
-            //noinspection ConstantConditions
             if (gatewayIdAssetIdMap.isEmpty() && ids.isEmpty()) {
                 return true;
             }
 
             // This is not atomic across gateways
-            //noinspection ConstantConditions
             if (!gatewayIdAssetIdMap.isEmpty()) {
                 for (Map.Entry<String, List<String>> gatewayIdAssetIds : gatewayIdAssetIdMap.entrySet()) {
                     String gatewayId = gatewayIdAssetIds.getKey();
@@ -1112,11 +1115,11 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             StringBuilder sb = new StringBuilder("DELETE FROM user_asset_link WHERE (1=0");
 
             IntStream.range(0, userAssetLinks.size()).forEach(i -> sb.append(" OR (asset_id=?")
-                .append(3*i)
-                .append(" AND user_id=?")
                 .append((3*i)+1)
-                .append(" AND realm=?")
+                .append(" AND user_id=?")
                 .append((3*i)+2)
+                .append(" AND realm=?")
+                .append((3*i)+3)
                 .append(")"));
             sb.append(")");
 
@@ -1124,9 +1127,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             IntStream.range(0, userAssetLinks.size()).forEach(i -> {
                 UserAssetLink userAssetLink = userAssetLinks.get(i);
-                query.setParameter((3*i), userAssetLink.getId().getAssetId());
-                query.setParameter((3*i)+1, userAssetLink.getId().getUserId());
-                query.setParameter((3*i)+2, userAssetLink.getId().getRealm());
+                query.setParameter((3*i)+1, userAssetLink.getId().getAssetId());
+                query.setParameter((3*i)+2, userAssetLink.getId().getUserId());
+                query.setParameter((3*i)+3, userAssetLink.getId().getRealm());
             });
 
             int deleteCount = query.executeUpdate();
@@ -1144,6 +1147,10 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 UserAssetLink.class,
                 null,
                 null));
+
+        if (LOG.isLoggable(FINE)) {
+            LOG.fine("Deleted user asset links: count=" + userAssetLinks.size() + ", links=" + userAssetLinks.stream().map(Object::toString).collect(Collectors.joining(", ")));
+        }
     }
 
     /**
@@ -1151,8 +1158,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
      */
     public void deleteUserAssetLinks(String userId) {
         persistenceService.doTransaction(entityManager -> {
-            Query query = entityManager.createQuery("DELETE FROM UserAssetLink ual WHERE ual.id.userId = ?0");
-            query.setParameter(0, userId);
+            Query query = entityManager.createQuery("DELETE FROM UserAssetLink ual WHERE ual.id.userId = ?1");
+            query.setParameter(1, userId);
             int deleteCount = query.executeUpdate();
             LOG.fine("Deleted all user asset links for user: user ID=" + userId + ", count=" + deleteCount);
         });
@@ -1191,7 +1198,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         em.unwrap(Session.class).doWork(connection -> {
 
-            LOG.finest("Storing user assets: count=" + userAssets.size());
+            if (LOG.isLoggable(FINE)) {
+                LOG.fine("Storing user asset links: count=" + userAssets.size() + ", links=" + userAssets.stream().map(Object::toString).collect(Collectors.joining(", ")));
+            }
             PreparedStatement st;
 
             try {
@@ -1216,7 +1225,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         null)
                 );
             } catch (Exception e) {
-                String msg = "Failed to create user assets: count=" + userAssets.size();
+                String msg = "Failed to create user asset links: count=" + userAssets.size();
                 LOG.log(Level.WARNING, msg, e);
                 throw new IllegalStateException(msg, e);
             }
@@ -1239,6 +1248,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
     @SuppressWarnings("unchecked")
     protected List<Asset<?>> findAll(EntityManager em, AssetQuery query) {
+        long startMillis = System.currentTimeMillis();
 
         if (query.access == null)
             query.access = PRIVATE;
@@ -1272,7 +1282,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         boolean containsCalendarPredicate = queryAndContainsCalendarPredicate.value;
 
         if (containsCalendarPredicate && (query.select != null && (query.select.attributes == null))) {
-            LOG.fine("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
+            LOG.warning("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
             throw new IllegalArgumentException("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
         }
 
@@ -1300,11 +1310,16 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 //        });
 
         org.hibernate.query.Query<Object[]> jpql = em.createNativeQuery(querySql.querySql, Asset.class).unwrap(org.hibernate.query.Query.class);
+
         querySql.apply(em, jpql);
         List<Asset<?>> assets = (List<Asset<?>>)(Object)jpql.getResultList();
 
         if (containsCalendarPredicate) {
             return assets.stream().filter(asset -> calendarEventPredicateMatches(timerService::getCurrentTimeMillis, query, asset)).toList();
+        }
+
+        if (LOG.isLoggable(FINE)) {
+            LOG.fine("Asset query took " + (System.currentTimeMillis() - startMillis) + "ms: return count=" + assets.size());
         }
 
         return assets;
@@ -1399,23 +1414,21 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     protected void publishModificationEvents(PersistenceEvent<Asset<?>> persistenceEvent) {
         Asset<?> asset = persistenceEvent.getEntity();
         switch (persistenceEvent.getCause()) {
-            case CREATE:
+            case CREATE -> {
                 // Fully load the asset
                 Asset<?> loadedAsset = find(new AssetQuery().ids(asset.getId()));
-
                 if (loadedAsset == null) {
                     return;
                 }
-
-                if (LOG.isLoggable(Level.FINER)) {
-                    LOG.finer("Asset created: " + loadedAsset.toStringAll());
+                if (LOG.isLoggable(Level.FINEST)) {
+                    LOG.finest("Asset created: " + loadedAsset.toStringAll());
                 } else {
                     LOG.fine("Asset created: " + loadedAsset);
                 }
-
                 clientEventService.publishEvent(
                     new AssetEvent(AssetEvent.Cause.CREATE, loadedAsset, null)
                 );
+            }
 
 //                // Raise attribute event for each attribute
 //                asset.getAttributes().forEach(newAttribute ->
@@ -1426,11 +1439,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 //                            newAttribute.getTimestamp().orElse(timerService.getCurrentTimeMillis()))
 //                            .setParentId(asset.getParentId()).setRealm(asset.getRealm())
 //                    ));
-                break;
-            case UPDATE:
-
-                String[] updatedProperties = persistenceEvent.getPropertyNames();
-                boolean attributesChanged = Arrays.asList(updatedProperties).contains("attributes");
+            case UPDATE -> {
+                boolean attributesChanged = persistenceEvent.hasPropertyChanged("attributes");
 
 //                String[] updatedProperties = Arrays.stream(persistenceEvent.getPropertyNames()).filter(propertyName -> {
 //                    Object oldValue = persistenceEvent.getPreviousState(propertyName);
@@ -1439,16 +1449,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 //                }).toArray(String[]::new);
 
                 // Fully load the asset
-                loadedAsset = find(new AssetQuery().ids(asset.getId()));
-
+                Asset<?> loadedAsset = find(new AssetQuery().ids(asset.getId()));
                 if (loadedAsset == null) {
                     return;
                 }
-
-                LOG.finer("Asset updated: " + persistenceEvent);
-
+                LOG.finest("Asset updated: " + persistenceEvent);
                 clientEventService.publishEvent(
-                    new AssetEvent(AssetEvent.Cause.UPDATE, loadedAsset, updatedProperties)
+                    new AssetEvent(AssetEvent.Cause.UPDATE, loadedAsset, persistenceEvent.getPropertyNames().toArray(String[]::new))
                 );
 
                 // Did any attributes change if so raise attribute events on the event bus
@@ -1474,15 +1481,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                             publishAttributeEvent(asset, newOrModifiedAttribute)
                         );
                 }
-                break;
-            case DELETE:
-
-                if (LOG.isLoggable(Level.FINER)) {
-                    LOG.finer("Asset deleted: " + asset.toStringAll());
+            }
+            case DELETE -> {
+                if (LOG.isLoggable(Level.FINEST)) {
+                    LOG.finest("Asset deleted: " + asset.toStringAll());
                 } else {
                     LOG.fine("Asset deleted: " + asset);
                 }
-
                 clientEventService.publishEvent(
                     new AssetEvent(AssetEvent.Cause.DELETE, asset, null)
                 );
@@ -1493,7 +1498,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     clientEventService.publishEvent(
                         AttributeEvent.deletedAttribute(asset.getId(), obsoleteAttribute.getName())
                     ));
-                break;
+            }
         }
     }
 
@@ -1629,21 +1634,11 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             sb.append(" order by ");
 
             switch (query.orderBy.property) {
-                case CREATED_ON:
-                    sb.append(" A.CREATED_ON ");
-                    break;
-                case ASSET_TYPE:
-                    sb.append(" A.TYPE ");
-                    break;
-                case NAME:
-                    sb.append(" A.NAME ");
-                    break;
-                case PARENT_ID:
-                    sb.append(" A.PARENT_ID ");
-                    break;
-                case REALM:
-                    sb.append(" A.REALM ");
-                    break;
+                case CREATED_ON -> sb.append(" A.CREATED_ON ");
+                case ASSET_TYPE -> sb.append(" A.TYPE ");
+                case NAME -> sb.append(" A.NAME ");
+                case PARENT_ID -> sb.append(" A.PARENT_ID ");
+                case REALM -> sb.append(" A.REALM ");
             }
             sb.append(query.orderBy.descending ? "desc " : "asc ");
         }
@@ -1658,7 +1653,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return "";
     }
 
-    @SuppressWarnings("unchecked")
     protected static boolean appendWhereClause(StringBuilder sb, AssetQuery query, int level, List<ParameterBinder> binders, Supplier<Long> timeProvider) {
         // level = 1 is main query
         // level = 2 is union
@@ -1691,7 +1685,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 isFirst = false;
                 final int pos = binders.size() + 1;
                 sb.append(pred.caseSensitive ? "A.NAME " : "upper(A.NAME)");
-                sb.append(buildMatchFilter(pred, pos));
+                sb.append(StringPredicate.toSQLParameter(pred, pos, false));
                 binders.add((em, st) -> st.setParameter(pos, pred.prepareValue()));
             }
             sb.append(")");
@@ -1779,18 +1773,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return containsCalendarPredicate;
     }
 
-    /**
-     * Resolves the concrete {@link Asset} types that are covered by the supplied asset types
-     */
-    protected static String[] getResolvedAssetTypes(Class<? extends Asset<?>>[] assetClasses) {
-        return Arrays.stream(assetClasses)
-            .flatMap(assetClass ->
-                Arrays.stream(ValueUtil.getAssetClasses(null)).filter(assetClass::isAssignableFrom))
-            .map(Class::getSimpleName)
-            .distinct()
-            .toArray(String[]::new);
-    }
-
     protected static boolean addAttributePredicateGroupQuery(StringBuilder sb, List<ParameterBinder> binders, int groupIndex, Consumer<String> selectInserter, LogicGroup<AttributePredicate> attributePredicateGroup, Supplier<Long> timeProvider) {
 
         boolean containsCalendarPredicate = false;
@@ -1860,8 +1842,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             sb.append(buildNameValuePredicateFilter(nameValuePredicate, jsonObjName, binders, timeProvider));
 
-            if (nameValuePredicate instanceof AttributePredicate) {
-                AttributePredicate attributePredicate = (AttributePredicate)nameValuePredicate;
+            if (nameValuePredicate instanceof AttributePredicate attributePredicate) {
 
                 if (attributePredicate.meta != null && attributePredicate.meta.length > 0) {
                     String metaJsonObjName = jsonObjName + "_AM" + metaIndex++;
@@ -1897,7 +1878,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             );
 
             final int pos = binders.size() + 1;
-            attributeBuilder.append(buildMatchFilter(nameValuePredicate.name, pos));
+            attributeBuilder.append(StringPredicate.toSQLParameter(nameValuePredicate.name, pos, false));
             binders.add((em, st) -> st.setParameter(pos, nameValuePredicate.name.prepareValue()));
 
         }
@@ -1915,46 +1896,52 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             // Inserts the SQL string and adds the parameters
             BiConsumer<StringBuilder, List<ParameterBinder>> valuePathInserter;
             boolean isAttributePredicate = nameValuePredicate instanceof AttributePredicate;
+            boolean isTextCompare = (nameValuePredicate.value instanceof ValueEmptyPredicate) || (nameValuePredicate.value instanceof StringPredicate);
+            final String operator = isTextCompare ? "#>>" : "#>";
 
             if (nameValuePredicate.path == null || nameValuePredicate.path.getPaths().length == 0) {
-                valuePathInserter = (sb, b) ->
-                    sb.append(isAttributePredicate ? "(" + jsonObjName + ".VALUE #> '{value}')" : jsonObjName + ".VALUE");
+                valuePathInserter = (sb, b) -> {
+                    if (isAttributePredicate) {
+                        sb.append("(").append(jsonObjName).append(".VALUE ").append(operator).append(" '{value}')");
+                    } else {
+                        sb.append(jsonObjName).append(".VALUE");
+                        if (isTextCompare) {
+                            sb.append(" #>> '{}'");
+                        }
+                    }
+                };
             } else {
                 List<String> paths = new ArrayList<>();
                 if (isAttributePredicate) {
                     paths.add("value");
                 }
-                paths.addAll(Arrays.stream(nameValuePredicate.path.getPaths()).map(Object::toString).collect(Collectors.toList()));
+                paths.addAll(Arrays.stream(nameValuePredicate.path.getPaths()).map(Object::toString).toList());
 
                 valuePathInserter = (sb, b) -> {
                     final int pos = binders.size() + 1;
-                    sb.append("(").append(jsonObjName).append(".VALUE #> ?").append(pos).append(")");
+                    sb.append("(").append(jsonObjName).append(".VALUE ").append(operator).append(" ?").append(pos).append(")");
                     binders.add((em, st) -> st.setParameter(pos, paths.toArray(new String[0]), StringArrayType.INSTANCE));
                 };
             }
 
-            if (nameValuePredicate.value instanceof StringPredicate) {
-                StringPredicate stringPredicate = (StringPredicate) nameValuePredicate.value;
+            if (nameValuePredicate.value instanceof StringPredicate stringPredicate) {
                 if (!stringPredicate.caseSensitive) {
                     attributeBuilder.append("upper(");
                 }
                 valuePathInserter.accept(attributeBuilder, binders);
-                attributeBuilder.append(" #>> '{}'");
                 if (!stringPredicate.caseSensitive) {
                     attributeBuilder.append(")");
                 }
                 final int pos = binders.size() + 1;
-                attributeBuilder.append(buildMatchFilter(stringPredicate, pos));
+                attributeBuilder.append(StringPredicate.toSQLParameter(stringPredicate, pos, false));
                 binders.add((em, st) -> st.setParameter(pos, stringPredicate.prepareValue()));
-            } else if (nameValuePredicate.value instanceof BooleanPredicate) {
-                BooleanPredicate booleanPredicate = (BooleanPredicate) nameValuePredicate.value;
+            } else if (nameValuePredicate.value instanceof BooleanPredicate booleanPredicate) {
                 valuePathInserter.accept(attributeBuilder, binders);
                 attributeBuilder
                     .append(" = to_jsonb(")
                     .append(booleanPredicate.value)
                     .append(")");
-            } else if (nameValuePredicate.value instanceof DateTimePredicate) {
-                DateTimePredicate dateTimePredicate = (DateTimePredicate) nameValuePredicate.value;
+            } else if (nameValuePredicate.value instanceof DateTimePredicate dateTimePredicate) {
                 attributeBuilder.append("(");
                 valuePathInserter.accept(attributeBuilder, binders);
                 attributeBuilder
@@ -1970,8 +1957,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     final int pos2 = binders.size() + 1;
                     binders.add((em, st) -> st.setParameter(pos2, new java.sql.Timestamp(fromAndTo.value != null ? fromAndTo.value : Long.MAX_VALUE)));
                 }
-            } else if (nameValuePredicate.value instanceof NumberPredicate) {
-                NumberPredicate numberPredicate = (NumberPredicate) nameValuePredicate.value;
+            } else if (nameValuePredicate.value instanceof NumberPredicate numberPredicate) {
                 attributeBuilder.append("(");
                 valuePathInserter.accept(attributeBuilder, binders);
                 attributeBuilder
@@ -1983,8 +1969,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     final int pos2 = binders.size() + 1;
                     binders.add((em, st) -> st.setParameter(pos2, numberPredicate.rangeValue));
                 }
-            } else if (nameValuePredicate.value instanceof ArrayPredicate) {
-                ArrayPredicate arrayPredicate = (ArrayPredicate) nameValuePredicate.value;
+            } else if (nameValuePredicate.value instanceof ArrayPredicate arrayPredicate) {
                 if (arrayPredicate.negated) {
                     attributeBuilder.append("NOT(");
                 }
@@ -2028,8 +2013,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     attributeBuilder.append(")");
                 }
             } else if (nameValuePredicate.value instanceof GeofencePredicate) {
-                if (nameValuePredicate.value instanceof RadialGeofencePredicate) {
-                    RadialGeofencePredicate location = (RadialGeofencePredicate) nameValuePredicate.value;
+                if (nameValuePredicate.value instanceof RadialGeofencePredicate location) {
                     attributeBuilder.append("ST_DistanceSphere(ST_MakePoint((");
                     valuePathInserter.accept(attributeBuilder, binders);
                     attributeBuilder
@@ -2044,8 +2028,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         .append(location.lat)
                         .append(location.negated ? ")) > " : ")) <= ")
                         .append(location.radius);
-                } else if (nameValuePredicate.value instanceof RectangularGeofencePredicate) {
-                    RectangularGeofencePredicate location = (RectangularGeofencePredicate) nameValuePredicate.value;
+                } else if (nameValuePredicate.value instanceof RectangularGeofencePredicate location) {
                     if (location.negated) {
                         attributeBuilder.append("NOT");
                     }
@@ -2069,8 +2052,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         .append("))");
                 }
             } else if (nameValuePredicate.value instanceof ValueEmptyPredicate) {
+                // Two situations - key is present and not null (cannot use IS NULL for this) or key is not present at all (have to use IS NULL for this)
                 valuePathInserter.accept(attributeBuilder, binders);
-                attributeBuilder.append(((ValueEmptyPredicate) nameValuePredicate.value).negate ? "\\:\\:text IS NOT NULL" : "\\:\\:text IS NULL");
+                attributeBuilder.append(((ValueEmptyPredicate) nameValuePredicate.value).negate ? " IS NOT NULL" : " IS NULL");
             } else if (nameValuePredicate.value instanceof CalendarEventPredicate) {
                 final int pos = binders.size() + 1;
                 java.sql.Timestamp when = new java.sql.Timestamp(((CalendarEventPredicate)nameValuePredicate.value).timestamp.getTime());
@@ -2114,55 +2098,44 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
     protected static String buildOperatorFilter(AssetQuery.Operator operator, boolean negate, int pos) {
         switch (operator) {
-            case EQUALS:
+            case EQUALS -> {
                 if (negate) {
                     return " <> ?" + pos + " ";
                 }
                 return " = ?" + pos + " ";
-            case GREATER_THAN:
+            }
+            case GREATER_THAN -> {
                 if (negate) {
                     return " <= ?" + pos + " ";
                 }
                 return " > ?" + pos + " ";
-            case GREATER_EQUALS:
+            }
+            case GREATER_EQUALS -> {
                 if (negate) {
                     return " < ?" + pos + " ";
                 }
                 return " >= ?" + pos + " ";
-            case LESS_THAN:
+            }
+            case LESS_THAN -> {
                 if (negate) {
                     return " >= ?" + pos + " ";
                 }
                 return " < ?" + pos + " ";
-            case LESS_EQUALS:
+            }
+            case LESS_EQUALS -> {
                 if (negate) {
                     return " > ?" + pos + " ";
                 }
                 return " <= ?" + pos + " ";
-            case BETWEEN:
+            }
+            case BETWEEN -> {
                 if (negate) {
-                    return " NOT BETWEEN ?" + pos + " AND ?" + (pos+1) + " ";
+                    return " NOT BETWEEN ?" + pos + " AND ?" + (pos + 1) + " ";
                 }
-                return " BETWEEN ?" + pos + " AND ?" + (pos+1) + " ";
+                return " BETWEEN ?" + pos + " AND ?" + (pos + 1) + " ";
+            }
         }
 
         throw new IllegalArgumentException("Unsupported operator: " + operator);
-    }
-
-    public static String buildMatchFilter(StringPredicate predicate, int pos) {
-        switch (predicate.match) {
-            case BEGIN:
-            case END:
-            case CONTAINS:
-                if (predicate.negate) {
-                    return " not like ?" + pos + " ";
-                }
-                return " like ?" + pos + " ";
-            default:
-                if (predicate.negate) {
-                    return " <> ?" + pos + " ";
-                }
-                return " = ?" + pos + " ";
-        }
     }
 }
