@@ -19,10 +19,10 @@
  */
 package org.openremote.manager.rules;
 
+import io.micrometer.core.instrument.MeterRegistry;
+import jakarta.persistence.EntityManager;
 import org.apache.camel.builder.RouteBuilder;
 import org.openremote.container.message.MessageBrokerService;
-import org.openremote.model.Constants;
-import org.openremote.model.PersistenceEvent;
 import org.openremote.container.persistence.PersistenceService;
 import org.openremote.container.timer.TimerService;
 import org.openremote.manager.asset.AssetProcessingException;
@@ -38,8 +38,11 @@ import org.openremote.manager.rules.flow.FlowResourceImpl;
 import org.openremote.manager.rules.geofence.GeofenceAssetAdapter;
 import org.openremote.manager.security.ManagerIdentityService;
 import org.openremote.manager.web.ManagerWebService;
+import org.openremote.manager.webhook.WebhookService;
+import org.openremote.model.Constants;
 import org.openremote.model.Container;
 import org.openremote.model.ContainerService;
+import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.Asset;
 import org.openremote.model.attribute.Attribute;
 import org.openremote.model.attribute.AttributeEvent.Source;
@@ -54,27 +57,24 @@ import org.openremote.model.security.Realm;
 import org.openremote.model.util.Pair;
 import org.openremote.model.util.TextUtil;
 import org.openremote.model.util.TimeUtil;
-import org.openremote.model.util.ValueUtil;
+import org.openremote.model.value.MetaHolder;
 import org.openremote.model.value.MetaItemType;
 
-import javax.persistence.EntityManager;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.function.BiFunction;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.logging.Level.*;
-import static java.util.stream.Collectors.toList;
-import static org.openremote.container.concurrent.GlobalLock.withLock;
-import static org.openremote.container.concurrent.GlobalLock.withLockReturning;
+import static java.util.logging.Level.SEVERE;
 import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
 import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
+import static org.openremote.container.util.MapAccess.getInteger;
 import static org.openremote.container.util.MapAccess.getString;
 import static org.openremote.manager.gateway.GatewayService.isNotForGateway;
-import static org.openremote.model.attribute.Attribute.getAddedOrModifiedAttributes;
 
 /**
  * Manages {@link RulesEngine}s for stored {@link Ruleset}s and processes asset attribute updates.
@@ -103,9 +103,20 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     public static final int PRIORITY = LOW_PRIORITY;
     public static final String OR_RULE_EVENT_EXPIRES = "OR_RULE_EVENT_EXPIRES";
     public static final String OR_RULE_EVENT_EXPIRES_DEFAULT = "PT1H";
+    /**
+     * This value defines the periodic firing of the rules engines, and therefore
+     * has an impact on system load. If a temporary fact has a shorter expiration
+     * time, it's not guaranteed to be removed within that time. Any time-based
+     * operation, such as matching temporary facts in a sliding time window, must
+     * be designed with this margin in mind.
+     */
+    public static final String OR_RULES_MIN_TEMP_FACT_EXPIRATION_MILLIS = "OR_RULES_MIN_TEMP_FACT_EXPIRATION_MILLIS";
+    public static final int OR_RULES_MIN_TEMP_FACT_EXPIRATION_MILLIS_DEFAULT = 50000; // Just under a minute to catch 1 min timer rules
+    public static final String OR_RULES_QUICK_FIRE_MILLIS = "OR_RULES_QUICK_FIRE_MILLIS";
+    public static final int OR_RULES_QUICK_FIRE_MILLIS_DEFAULT = 3000;
     private static final Logger LOG = Logger.getLogger(RulesService.class.getName());
-    protected final Map<String, RulesEngine<RealmRuleset>> realmEngines = new HashMap<>();
-    protected final Map<String, RulesEngine<AssetRuleset>> assetEngines = new HashMap<>();
+    protected final Map<String, RulesEngine<RealmRuleset>> realmEngines = new ConcurrentHashMap<>();
+    protected final Map<String, RulesEngine<AssetRuleset>> assetEngines = new ConcurrentHashMap<>();
     protected List<GeofenceAssetAdapter> geofenceAssetAdapters = new ArrayList<>();
     protected TimerService timerService;
     protected ScheduledExecutorService executorService;
@@ -114,6 +125,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     protected ManagerIdentityService identityService;
     protected AssetStorageService assetStorageService;
     protected NotificationService notificationService;
+    protected WebhookService webhookService;
     protected AssetProcessingService assetProcessingService;
     protected AssetDatapointService assetDatapointService;
     protected AssetPredictedDatapointService assetPredictedDatapointService;
@@ -122,16 +134,19 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     protected RulesEngine<GlobalRuleset> globalEngine;
     protected Realm[] realms;
     protected AssetLocationPredicateProcessor locationPredicateRulesConsumer;
-    protected Map<RulesEngine<?>, List<RulesEngine.AssetStateLocationPredicates>> engineAssetLocationPredicateMap = new HashMap<>();
-    protected Set<String> assetsWithModifiedLocationPredicates = new HashSet<>();
+    protected final ConcurrentMap<RulesEngine<?>, List<RulesEngine.AssetStateLocationPredicates>> engineAssetLocationPredicateMap = new ConcurrentHashMap<>();
+    protected final Set<String> assetsWithModifiedLocationPredicates = new HashSet<>();
     // Keep global list of asset states that have been pushed to any engines
     // The objects are already in memory inside the rule engines but keeping them
     // here means we can quickly insert facts into newly started engines
-    protected Set<AssetState<?>> assetStates = new HashSet<>();
-    protected Set<AssetState<?>> preInitAssetStates = new HashSet<>();
+    protected final Set<AssetState<?>> assetStates = new HashSet<>();
+    protected final Set<AssetState<?>> preInitAssetStates = new HashSet<>();
     protected long defaultEventExpiresMillis = 1000*60*60;
+    protected long tempFactExpirationMillis;
+    protected long quickFireMillis;
     protected boolean initDone;
     protected boolean startDone;
+    protected MeterRegistry meterRegistry;
 
     @Override
     public int getPriority() {
@@ -146,6 +161,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
         rulesetStorageService = container.getService(RulesetStorageService.class);
         identityService = container.getService(ManagerIdentityService.class);
         notificationService = container.getService(NotificationService.class);
+        webhookService = container.getService(WebhookService.class);
         assetStorageService = container.getService(AssetStorageService.class);
         assetProcessingService = container.getService(AssetProcessingService.class);
         assetDatapointService = container.getService(AssetDatapointService.class);
@@ -153,9 +169,14 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
         clientEventService = container.getService(ClientEventService.class);
         gatewayService = container.getService(GatewayService.class);
 
+        tempFactExpirationMillis = getInteger(container.getConfig(), OR_RULES_MIN_TEMP_FACT_EXPIRATION_MILLIS, OR_RULES_MIN_TEMP_FACT_EXPIRATION_MILLIS_DEFAULT);
+        quickFireMillis = getInteger(container.getConfig(), OR_RULES_QUICK_FIRE_MILLIS, OR_RULES_QUICK_FIRE_MILLIS_DEFAULT);
+
         if (initDone) {
             return;
         }
+
+        meterRegistry = container.getMeterRegistry();
 
         clientEventService.addSubscriptionAuthorizer((realm, auth, subscription) -> {
 
@@ -215,7 +236,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     public void configure() throws Exception {
         // If any ruleset was modified in the database then check its' status and undeploy, deploy, or update it
         from(PERSISTENCE_TOPIC)
-            .routeId("RulesetPersistenceChanges")
+            .routeId("Persistence-Ruleset")
             .filter(isPersistenceEventForEntityType(Ruleset.class))
             .filter(isNotForGateway(gatewayService))
             .process(exchange -> {
@@ -223,10 +244,10 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                 processRulesetChange((Ruleset) persistenceEvent.getEntity(), persistenceEvent.getCause());
             });
 
-        // If any realm was modified in the database then check its' status and undeploy, deploy or update any
+        // If any realm was modified in the database then check its status and undeploy, deploy or update any
         // associated rulesets
         from(PERSISTENCE_TOPIC)
-            .routeId("RuleEngineRealmChanges")
+            .routeId("Persistence-RulesRealm")
             .filter(isPersistenceEventForEntityType(Realm.class))
             .filter(isNotForGateway(gatewayService))
             .process(exchange -> {
@@ -237,7 +258,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
         // If any asset was modified in the database, detect changed attributes
         from(PERSISTENCE_TOPIC)
-            .routeId("RuleEngineAssetChanges")
+            .routeId("Persistence-RulesAsset")
             .filter(isPersistenceEventForEntityType(Asset.class))
             .process(exchange -> {
                 PersistenceEvent<Asset<?>> persistenceEvent = (PersistenceEvent<Asset<?>>) exchange.getIn().getBody(PersistenceEvent.class);
@@ -319,35 +340,40 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
     @Override
     public void stop(Container container) throws Exception {
-        withLock(getClass().getSimpleName() + "::stop", () -> {
-            for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
-                try {
-                    geofenceAssetAdapter.stop(container);
-                } catch (Exception e) {
-                    LOG.log(SEVERE, "Exception thrown whilst stopping geofence adapter", e);
-                }
+        for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
+            try {
+                geofenceAssetAdapter.stop(container);
+            } catch (Exception e) {
+                LOG.log(SEVERE, "Exception thrown whilst stopping geofence adapter", e);
             }
+        }
 
-            assetEngines.forEach((assetId, rulesEngine) -> rulesEngine.stop(true));
-            assetEngines.clear();
-            realmEngines.forEach((realm, rulesEngine) -> rulesEngine.stop(true));
-            realmEngines.clear();
+        assetEngines.forEach((assetId, rulesEngine) -> rulesEngine.stop());
+        assetEngines.clear();
+        realmEngines.forEach((realm, rulesEngine) -> rulesEngine.stop());
+        realmEngines.clear();
 
-            if (globalEngine != null) {
-                globalEngine.stop(true);
-                globalEngine = null;
-            }
+        if (globalEngine != null) {
+            globalEngine.stop();
+            globalEngine = null;
+        }
 
+        synchronized (assetStates) {
             assetStates.clear();
-        });
+        }
 
         for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
             geofenceAssetAdapter.stop(container);
         }
     }
 
-    protected static boolean attributeIsRuleState(Attribute<?> attribute) {
-        return attribute.getMetaValue(MetaItemType.RULE_STATE).orElse(attribute.hasMeta(MetaItemType.AGENT_LINK));
+    protected static boolean isRuleState(MetaHolder metaHolder) {
+        if (metaHolder.getMeta() == null) {
+            return false;
+        }
+
+        return metaHolder.getMeta().getValue(MetaItemType.RULE_STATE)
+            .orElse(metaHolder.getMeta().has(MetaItemType.AGENT_LINK));
     }
 
     @Override
@@ -368,7 +394,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
         // We might process two facts for a single attribute update, if that is what the user wants
 
         // First as asset state
-        if (assetState.getMetaValue(MetaItemType.RULE_STATE).orElse(assetState.hasMeta(MetaItemType.AGENT_LINK))) {
+        if (isRuleState(assetState)) {
             updateAssetState(assetState);
         }
 
@@ -415,276 +441,271 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     }
 
     public GeofenceDefinition[] getAssetGeofences(String assetId) {
-        return withLockReturning(getClass().getSimpleName() + "::getAssetGeofences", () -> {
+        LOG.finest("Requesting geofences for asset: " + assetId);
 
-            LOG.finest("Requesting geofences for asset: " + assetId);
-
-            for (GeofenceAssetAdapter geofenceAdapter : geofenceAssetAdapters) {
-                GeofenceDefinition[] geofences = geofenceAdapter.getAssetGeofences(assetId);
-                if (geofences != null) {
-                    LOG.finest("Retrieved geofences from geofence adapter '" + geofenceAdapter.getName() + "' for asset: " + assetId);
-                    return geofences;
-                }
+        for (GeofenceAssetAdapter geofenceAdapter : geofenceAssetAdapters) {
+            GeofenceDefinition[] geofences = geofenceAdapter.getAssetGeofences(assetId);
+            if (geofences != null) {
+                LOG.finest("Retrieved geofences from geofence adapter '" + geofenceAdapter.getName() + "' for asset: " + assetId);
+                return geofences;
             }
+        }
 
-            return new GeofenceDefinition[0];
-        });
+        return new GeofenceDefinition[0];
     }
 
     protected void processRealmChange(Realm realm, PersistenceEvent.Cause cause) {
-        withLock(getClass().getSimpleName() + "::processRealmChange", () -> {
-            // Check if enabled status has changed
-            boolean wasEnabled = Arrays.stream(realms).anyMatch(t -> realm.getName().equals(t.getName()) && realm.getId().equals(t.getId()));
-            boolean isEnabled = realm.getEnabled() && cause != PersistenceEvent.Cause.DELETE;
-            realms = Arrays.stream(identityService.getIdentityProvider().getRealms()).filter(Realm::getEnabled).toArray(Realm[]::new);
+        // Check if enabled status has changed
+        boolean wasEnabled = Arrays.stream(realms).anyMatch(t -> realm.getName().equals(t.getName()) && realm.getId().equals(t.getId()));
+        boolean isEnabled = realm.getEnabled() && cause != PersistenceEvent.Cause.DELETE;
+        realms = Arrays.stream(identityService.getIdentityProvider().getRealms()).filter(Realm::getEnabled).toArray(Realm[]::new);
 
-            if (wasEnabled == isEnabled) {
-                // Nothing to do here
-                return;
+        if (wasEnabled == isEnabled) {
+            // Nothing to do here
+            return;
+        }
+
+        if (wasEnabled) {
+            // Remove realm rules engine for this realm if it exists
+            RulesEngine<RealmRuleset> realmRulesEngine = realmEngines.get(realm.getName());
+            if (realmRulesEngine != null) {
+                realmRulesEngine.stop();
+                realmEngines.remove(realm.getName());
             }
 
-            if (wasEnabled) {
-                // Remove realm rules engine for this realm if it exists
-                RulesEngine<RealmRuleset> realmRulesEngine = realmEngines.get(realm.getName());
-                if (realmRulesEngine != null) {
-                    realmRulesEngine.stop();
-                    realmEngines.remove(realm.getName());
-                }
+            // Remove any asset rules engines for assets in this realm
+            assetEngines.values().stream()
+                .filter(re -> re.getId().getRealm().map(r -> r.equals(realm.getName())).orElse(false))
+                .forEach(RulesEngine::stop);
+            assetEngines.entrySet().removeIf(entry ->
+                entry.getValue().getId().getRealm().map(r -> r.equals(realm.getName())).orElse(
+                    false)
+            );
 
-                // Remove any asset rules engines for assets in this realm
-                assetEngines.values().stream()
-                    .filter(re -> re.getId().getRealm().map(r -> r.equals(realm.getName())).orElse(false))
-                    .forEach(RulesEngine::stop);
-                assetEngines.entrySet().removeIf(entry ->
-                    entry.getValue().getId().getRealm().map(r -> r.equals(realm.getName())).orElse(
-                        false)
-                );
+        } else {
+            // Create realm rules engines for this realm if it has any rulesets
+            rulesetStorageService
+                .findAll(
+                    RealmRuleset.class,
+                    new RulesetQuery()
+                        .setRealm(realm.getName())
+                        .setFullyPopulate(true)
+                        .setEnabledOnly(true))
+                .stream()
+                .map(this::deployRealmRuleset)
+                .filter(Objects::nonNull)
+                .forEach(RulesEngine::start);
 
-            } else {
-                // Create realm rules engines for this realm if it has any rulesets
-                rulesetStorageService
-                    .findAll(
-                        RealmRuleset.class,
-                        new RulesetQuery()
-                            .setRealm(realm.getName())
-                            .setFullyPopulate(true)
-                            .setEnabledOnly(true))
-                    .stream()
-                    .map(this::deployRealmRuleset)
-                    .filter(Objects::nonNull)
-                    .forEach(RulesEngine::start);
-
-                // Create any asset rules engines for assets in this realm that have rulesets
-                deployAssetRulesets(
-                    rulesetStorageService.findAll(
-                        AssetRuleset.class,
-                        new RulesetQuery()
-                            .setRealm(realm.getName())
-                            .setEnabledOnly(true)
-                            .setFullyPopulate(true)))
-                    .forEach(RulesEngine::start);
-            }
-        });
+            // Create any asset rules engines for assets in this realm that have rulesets
+            deployAssetRulesets(
+                rulesetStorageService.findAll(
+                    AssetRuleset.class,
+                    new RulesetQuery()
+                        .setRealm(realm.getName())
+                        .setEnabledOnly(true)
+                        .setFullyPopulate(true)))
+                .forEach(RulesEngine::start);
+        }
     }
 
     protected void processAssetChange(Asset<?> asset, PersistenceEvent<Asset<?>> persistenceEvent) {
-        withLock(getClass().getSimpleName() + "::processAssetChange", () -> {
-
-            switch (persistenceEvent.getCause()) {
-                case CREATE: {
-                    // Load rule state attributes into rules engine
-                    asset
-                        .getAttributes()
-                        .stream()
-                        .filter(RulesService::attributeIsRuleState)
-                        .forEach(attribute -> {
-                            AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                            LOG.finer("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
-                            updateAssetState(assetState);
-                        });
-                    break;
-                }
-                case UPDATE: {
-
-                    boolean attributesChanged = Arrays.asList(persistenceEvent.getPropertyNames()).contains("attributes");
-                    AttributeMap oldAttributes = attributesChanged ? ((AttributeMap) persistenceEvent.getPreviousState("attributes")) : asset.getAttributes();
-                    AttributeMap currentAttributes = asset.getAttributes();
-
-                    List<Attribute<?>> oldStateAttributes = oldAttributes
-                        .stream()
-                        .filter(RulesService::attributeIsRuleState).toList();
-
-                    List<Attribute<?>> newStateAttributes = currentAttributes
-                        .stream()
-                        .filter(RulesService::attributeIsRuleState).toList();
-
-                    oldStateAttributes.forEach(attribute -> {
+        switch (persistenceEvent.getCause()) {
+            case CREATE: {
+                // Load rule state attributes into rules engine
+                asset
+                    .getAttributes()
+                    .stream()
+                    .filter(RulesService::isRuleState)
+                    .forEach(attribute -> {
                         AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                        LOG.finer("Asset was persisted (" + persistenceEvent.getCause() + "), retracting fact: " + assetState);
+                        LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
+                        updateAssetState(assetState);
+                    });
+                break;
+            }
+            case UPDATE: {
+
+                boolean attributesChanged = persistenceEvent.hasPropertyChanged("attributes");
+                AttributeMap oldAttributes = attributesChanged ? ((AttributeMap) persistenceEvent.getPreviousState("attributes")) : asset.getAttributes();
+                AttributeMap currentAttributes = asset.getAttributes();
+
+                List<Attribute<?>> oldStateAttributes = oldAttributes
+                    .stream()
+                    .filter(RulesService::isRuleState).toList();
+
+                List<Attribute<?>> newStateAttributes = currentAttributes
+                    .stream()
+                    .filter(RulesService::isRuleState).toList();
+
+                // Just retract all old attributes rather than compare every value that might cause asset state to mutate
+                oldStateAttributes.forEach(attribute -> {
+                    AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
+                    LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), retracting obsolete fact: " + assetState);
+                    retractAssetState(assetState);
+                });
+
+                // Insert new states for new or changed attributes
+                newStateAttributes.forEach(attribute -> {
+                    AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
+                    LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
+                    updateAssetState(assetState);
+                });
+                break;
+            }
+            case DELETE:
+                // Retract any facts that were associated with this asset
+                asset.getAttributes().stream()
+                    .filter(RulesService::isRuleState)
+                    .forEach(attribute -> {
+                        AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
+                        LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), retracting fact: " + assetState);
                         retractAssetState(assetState);
                     });
-
-                    // Insert new states
-                    newStateAttributes.forEach(attribute -> {
-                            AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                            LOG.finer("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
-                            updateAssetState(assetState);
-                        });
-                    break;
-                }
-                case DELETE:
-                    // Retract any facts that were associated with this asset
-                    asset.getAttributes().stream()
-                        .filter(RulesService::attributeIsRuleState)
-                        .forEach(attribute -> {
-                            AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                            LOG.finer("Asset was persisted (" + persistenceEvent.getCause() + "), retracting fact: " + assetState);
-                            retractAssetState(assetState);
-                        });
-                    break;
-            }
-        });
+                break;
+        }
     }
 
-    protected void processRulesetChange(Ruleset ruleset, PersistenceEvent.Cause cause) {
-        withLock(getClass().getSimpleName() + "::processRulesetChange", () -> {
-            if (cause == PersistenceEvent.Cause.DELETE || !ruleset.isEnabled()) {
-                if (ruleset instanceof GlobalRuleset) {
-                    undeployGlobalRuleset((GlobalRuleset) ruleset);
-                } else if (ruleset instanceof RealmRuleset) {
-                    undeployRealmRuleset((RealmRuleset) ruleset);
-                } else if (ruleset instanceof AssetRuleset) {
-                    undeployAssetRuleset((AssetRuleset) ruleset);
-                }
-            } else {
-                if (ruleset instanceof GlobalRuleset) {
+    protected synchronized void processRulesetChange(Ruleset ruleset, PersistenceEvent.Cause cause) {
+        if (cause == PersistenceEvent.Cause.DELETE || !ruleset.isEnabled()) {
+            if (ruleset instanceof GlobalRuleset) {
+                undeployGlobalRuleset((GlobalRuleset) ruleset);
+            } else if (ruleset instanceof RealmRuleset) {
+                undeployRealmRuleset((RealmRuleset) ruleset);
+            } else if (ruleset instanceof AssetRuleset) {
+                undeployAssetRuleset((AssetRuleset) ruleset);
+            }
+        } else {
+            if (ruleset instanceof GlobalRuleset) {
 
-                    boolean isNewEngine = globalEngine == null;
-                    RulesEngine<GlobalRuleset> engine = deployGlobalRuleset((GlobalRuleset) ruleset);
+                boolean isNewEngine = globalEngine == null;
+                RulesEngine<GlobalRuleset> engine = deployGlobalRuleset((GlobalRuleset) ruleset);
 
-                    if (isNewEngine) {
+                if (isNewEngine) {
+                    synchronized (assetStates) {
                         // Push all existing facts into the engine
                         assetStates.forEach(assetState -> engine.updateOrInsertAssetState(assetState, true));
                     }
+                }
 
-                    engine.start();
+                engine.start();
 
-                } else if (ruleset instanceof RealmRuleset) {
+            } else if (ruleset instanceof RealmRuleset) {
 
-                    boolean isNewEngine = !realmEngines.containsKey(((RealmRuleset) ruleset).getRealm());
-                    RulesEngine<RealmRuleset> engine = deployRealmRuleset((RealmRuleset) ruleset);
+                boolean isNewEngine = !realmEngines.containsKey(((RealmRuleset) ruleset).getRealm());
+                RulesEngine<RealmRuleset> engine = deployRealmRuleset((RealmRuleset) ruleset);
 
-                    if (isNewEngine) {
-                        // Push all existing facts into the engine
+                if (isNewEngine) {
+                    // Push all existing facts into the engine
+                    synchronized (assetStates) {
                         assetStates.forEach(assetState -> {
                             if (assetState.getRealm().equals(((RealmRuleset) ruleset).getRealm())) {
                                 engine.updateOrInsertAssetState(assetState, true);
                             }
                         });
                     }
-
-                    engine.start();
-
-                } else if (ruleset instanceof AssetRuleset) {
-
-                    // Must reload from the database, the ruleset might not be completely hydrated on CREATE or UPDATE
-                    AssetRuleset assetRuleset = rulesetStorageService.find(AssetRuleset.class, ruleset.getId());
-                    boolean isNewEngine = !assetEngines.containsKey(((AssetRuleset) ruleset).getAssetId());
-                    RulesEngine<AssetRuleset> engine = deployAssetRuleset(assetRuleset);
-
-                    if (isNewEngine) {
-                        // Push all existing facts for this asset (and it's children into the engine)
-                        getAssetStatesInScope(((AssetRuleset) ruleset).getAssetId())
-                            .forEach(assetState -> engine.updateOrInsertAssetState(assetState, true));
-                    }
-
-                    engine.start();
                 }
+
+                engine.start();
+
+            } else if (ruleset instanceof AssetRuleset) {
+
+                // Must reload from the database, the ruleset might not be completely hydrated on CREATE or UPDATE
+                AssetRuleset assetRuleset = rulesetStorageService.find(AssetRuleset.class, ruleset.getId());
+                boolean isNewEngine = !assetEngines.containsKey(((AssetRuleset) ruleset).getAssetId());
+                RulesEngine<AssetRuleset> engine = deployAssetRuleset(assetRuleset);
+
+                if (isNewEngine) {
+                    // Push all existing facts for this asset (and it's children into the engine)
+                    getAssetStatesInScope(((AssetRuleset) ruleset).getAssetId())
+                        .forEach(assetState -> engine.updateOrInsertAssetState(assetState, true));
+                }
+
+                engine.start();
             }
-        });
+        }
     }
 
     /**
      * Deploy the ruleset into the global engine creating the engine if necessary.
      */
     protected RulesEngine<GlobalRuleset> deployGlobalRuleset(GlobalRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployGlobalRuleset", () -> {
 
+        synchronized (this) {
             // Global rules have access to everything in the system
             if (globalEngine == null) {
                 globalEngine = new RulesEngine<>(
                     timerService,
+                    this,
                     identityService,
                     executorService,
                     assetStorageService,
                     assetProcessingService,
                     notificationService,
+                    webhookService,
                     clientEventService,
                     assetDatapointService,
                     assetPredictedDatapointService,
                     new RulesEngineId<>(),
-                    locationPredicateRulesConsumer
+                    locationPredicateRulesConsumer,
+                    meterRegistry
                 );
             }
+        }
 
-            globalEngine.addRuleset(ruleset);
+        globalEngine.addRuleset(ruleset);
 
-            return globalEngine;
-        });
+        return globalEngine;
     }
 
-    protected void undeployGlobalRuleset(GlobalRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployGlobalRuleset", () -> {
-            if (globalEngine == null) {
-                return;
-            }
+    protected synchronized void undeployGlobalRuleset(GlobalRuleset ruleset) {
+        if (globalEngine == null) {
+            return;
+        }
 
-            if (globalEngine.removeRuleset(ruleset)) {
-                globalEngine.stop();
-                globalEngine = null;
-            }
-        });
+        if (globalEngine.removeRuleset(ruleset)) {
+            globalEngine = null;
+        }
     }
 
     protected RulesEngine<RealmRuleset> deployRealmRuleset(RealmRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployRealmRuleset", () -> {
+        RulesEngine<RealmRuleset> realmRulesEngine;
 
+        synchronized (this) {
             // Look for existing rules engines for this realm
-            RulesEngine<RealmRuleset> realmRulesEngine = realmEngines
+            realmRulesEngine = realmEngines
                 .computeIfAbsent(ruleset.getRealm(), (realm) ->
                     new RulesEngine<>(
                         timerService,
+                        this,
                         identityService,
                         executorService,
                         assetStorageService,
                         assetProcessingService,
                         notificationService,
+                        webhookService,
                         clientEventService,
                         assetDatapointService,
                         assetPredictedDatapointService,
                         new RulesEngineId<>(realm),
-                        locationPredicateRulesConsumer
+                        locationPredicateRulesConsumer,
+                        meterRegistry
                     ));
+        }
 
-            realmRulesEngine.addRuleset(ruleset);
+        realmRulesEngine.addRuleset(ruleset);
 
-            return realmRulesEngine;
-        });
+        return realmRulesEngine;
     }
 
-    protected void undeployRealmRuleset(RealmRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployRealmRuleset", () -> {
+    protected synchronized void undeployRealmRuleset(RealmRuleset ruleset) {
+        RulesEngine<RealmRuleset> rulesEngine = realmEngines.get(ruleset.getRealm());
+        if (rulesEngine == null) {
+            return;
+        }
 
-            RulesEngine<RealmRuleset> rulesEngine = realmEngines.get(ruleset.getRealm());
-            if (rulesEngine == null) {
-                return;
-            }
-
-            if (rulesEngine.removeRuleset(ruleset)) {
-                rulesEngine.stop();
-                realmEngines.remove(ruleset.getRealm());
-            }
-        });
+        if (rulesEngine.removeRuleset(ruleset)) {
+            realmEngines.remove(ruleset.getRealm());
+        }
     }
 
     protected Stream<RulesEngine<AssetRuleset>> deployAssetRulesets(List<AssetRuleset> rulesets) {
@@ -723,79 +744,62 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     }
 
     protected RulesEngine<AssetRuleset> deployAssetRuleset(AssetRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployAssetRuleset", () -> {
+        RulesEngine<AssetRuleset> assetRulesEngine;
 
+        synchronized (this) {
             // Look for existing rules engine for this asset
-            RulesEngine<AssetRuleset> assetRulesEngine = assetEngines
+            assetRulesEngine = assetEngines
                 .computeIfAbsent(ruleset.getAssetId(), (assetId) ->
                     new RulesEngine<>(
                         timerService,
+                        this,
                         identityService,
                         executorService,
                         assetStorageService,
                         assetProcessingService,
                         notificationService,
+                        webhookService,
                         clientEventService,
                         assetDatapointService,
                         assetPredictedDatapointService,
                         new RulesEngineId<>(ruleset.getRealm(), assetId),
-                        locationPredicateRulesConsumer
+                        locationPredicateRulesConsumer,
+                        meterRegistry
                     ));
+        }
 
-            assetRulesEngine.addRuleset(ruleset);
-
-            return assetRulesEngine;
-        });
+        assetRulesEngine.addRuleset(ruleset);
+        return assetRulesEngine;
     }
 
-    protected void undeployAssetRuleset(AssetRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployAssetRuleset", () -> {
-            RulesEngine<AssetRuleset> rulesEngine = assetEngines.get(ruleset.getAssetId());
-            if (rulesEngine == null) {
-                return;
-            }
+    protected synchronized void undeployAssetRuleset(AssetRuleset ruleset) {
+        RulesEngine<AssetRuleset> rulesEngine = assetEngines.get(ruleset.getAssetId());
+        if (rulesEngine == null) {
+            return;
+        }
 
-            if (rulesEngine.removeRuleset(ruleset)) {
-                rulesEngine.stop();
-                assetEngines.remove(ruleset.getAssetId());
-            }
-        });
+        if (rulesEngine.removeRuleset(ruleset)) {
+            assetEngines.remove(ruleset.getAssetId());
+        }
     }
 
     protected void insertAssetEvent(AssetState<?> assetState, long expiresMillis) {
-        withLock(getClass().getSimpleName() + "::insertAssetEvent", () -> {
-            // Get the chain of rule engines that we need to pass through
-            List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
+        // Get the chain of rule engines that we need to pass through
+        List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
 
-            // Check that all engines in the scope are available
-            if (rulesEngines.stream().anyMatch(RulesEngine::isError)) {
-                LOG.severe("At least one rules engine is in an error state, skipping: " + assetState);
-                if (LOG.isLoggable(FINEST)) {
-                    for (RulesEngine<?> rulesEngine : rulesEngines) {
-                        if (rulesEngine.isError()) {
-                            LOG.log(FINEST, "Rules engine error state: " + rulesEngine, rulesEngine.getError());
-                        }
-                    }
-                }
-                return;
-            }
-
-            // Pass through each engine
-            for (RulesEngine<?> rulesEngine : rulesEngines) {
-                rulesEngine.insertAssetEvent(expiresMillis, assetState);
-            }
-        });
+        // Pass through each engine
+        for (RulesEngine<?> rulesEngine : rulesEngines) {
+            rulesEngine.insertAssetEvent(expiresMillis, assetState);
+        }
     }
 
     protected void updateAssetState(AssetState<?> assetState) {
-        withLock(getClass().getSimpleName() + "::updateAssetState", () -> {
-            // TODO: implement rules processing error state handling
+        LOG.finest("Updating asset state: " + assetState);
 
-            LOG.finer("Updating asset state: " + assetState);
+        // Get the chain of rule engines that we need to pass through
+        List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
 
-            // Get the chain of rule engines that we need to pass through
-            List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
-
+        synchronized (assetStates) {
             // Remove asset state with same attribute ref as new state, add new state
             boolean inserted = !assetStates.remove(assetState);
             assetStates.add(assetState);
@@ -804,32 +808,31 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             for (RulesEngine<?> rulesEngine : rulesEngines) {
                 rulesEngine.updateOrInsertAssetState(assetState, inserted);
             }
-        });
+        }
     }
 
     protected void retractAssetState(AssetState<?> assetState) {
         // Get the chain of rule engines that we need to pass through
         List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
 
-        // Remove asset state with same attribute ref
-        assetStates.remove(assetState);
+        synchronized (assetStates) {
+            // Remove asset state with same attribute ref
+            assetStates.remove(assetState);
 
-        if (rulesEngines.size() == 0) {
-            LOG.finer("Ignoring as there are no matching rules engines: " + assetState);
-        }
-
-        // Pass through each rules engine
-        for (RulesEngine<?> rulesEngine : rulesEngines) {
-            rulesEngine.removeAssetState(assetState);
+            // Pass through each rules engine
+            for (RulesEngine<?> rulesEngine : rulesEngines) {
+                rulesEngine.removeAssetState(assetState);
+            }
         }
     }
 
     protected List<AssetState<?>> getAssetStatesInScope(String assetId) {
-        return withLockReturning(getClass().getSimpleName() + "::getAssetStatesInScope", () ->
-                assetStates
+        synchronized (assetStates) {
+            return assetStates
                 .stream()
                 .filter(assetState -> Arrays.asList(assetState.getPath()).contains(assetId))
-                .collect(Collectors.toList()));
+                .collect(Collectors.toList());
+        }
     }
 
     protected List<RulesEngine<?>> getEnginesInScope(String realm, String[] assetPath) {
@@ -865,7 +868,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
         return assets.stream()
             .map(asset ->
                 new Pair<>(asset, asset.getAttributes().stream()
-                    .filter(RulesService::attributeIsRuleState))
+                    .filter(RulesService::isRuleState))
             );
     }
 
@@ -875,7 +878,9 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
      * have modified {@link LocationAttributePredicate}s and to notify the {@link GeofenceAssetAdapter}s.
      */
     protected void onEngineLocationRulesChanged(RulesEngine<?> rulesEngine, List<RulesEngine.AssetStateLocationPredicates> newEngineAssetStateLocationPredicates) {
-        withLock(getClass().getSimpleName() + "::onEngineLocationRulesChanged", () -> {
+
+        synchronized (assetsWithModifiedLocationPredicates) {
+
             int initialModifiedCount = assetsWithModifiedLocationPredicates.size();
 
             if (newEngineAssetStateLocationPredicates == null) {
@@ -884,8 +889,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                         // All location predicates have been removed so record each asset state as modified
                         assetsWithModifiedLocationPredicates.addAll(
                             existingAssetStateLocationPredicates.stream().map(
-                                RulesEngine.AssetStateLocationPredicates::getAssetId).collect(
-                                Collectors.toList()));
+                                RulesEngine.AssetStateLocationPredicates::getAssetId).toList());
                         // Remove this engine from the map
                         return null;
                     });
@@ -898,8 +902,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                             // All asset states are new so record them all as modified
                             assetsWithModifiedLocationPredicates.addAll(
                                 newEngineAssetStateLocationPredicates.stream().map(
-                                    RulesEngine.AssetStateLocationPredicates::getAssetId).collect(
-                                    Collectors.toList()));
+                                    RulesEngine.AssetStateLocationPredicates::getAssetId).toList());
                         } else {
                             // Find obsolete and modified asset states
                             existingEngineAssetStateLocationPredicates.forEach(
@@ -947,11 +950,12 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             if (assetsWithModifiedLocationPredicates.size() != initialModifiedCount) {
                 processModifiedGeofences();
             }
-        });
+        }
     }
 
     protected void processModifiedGeofences() {
-        withLock(getClass().getSimpleName() + "::processModifiedGeofences", () -> {
+
+        synchronized (assetsWithModifiedLocationPredicates) {
             LOG.finest("Processing geofence modifications: modified asset geofence count=" + assetsWithModifiedLocationPredicates.size());
 
             try {
@@ -967,9 +971,9 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
                     engineAssetLocationPredicateMap.forEach((rulesEngine, engineAssetStateLocationPredicates) ->
                         engineAssetStateLocationPredicates.stream().filter(
-                            assetStateLocationPredicates ->
-                                assetStateLocationPredicates.getAssetId().equals(
-                                    assetId))
+                                assetStateLocationPredicates ->
+                                    assetStateLocationPredicates.getAssetId().equals(
+                                        assetId))
                             .findFirst()
                             .ifPresent(
                                 assetStateLocationPredicate -> {
@@ -996,7 +1000,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                 // Clear modified assets ready for next batch
                 assetsWithModifiedLocationPredicates.clear();
             }
-        });
+        }
     }
 
     protected Optional<RulesetDeployment> getRulesetDeployment(Long rulesetId) {
@@ -1032,7 +1036,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             String realm = assetStates.get(0).getRealm();
             String[] assetPaths = assetStates.stream().flatMap(assetState -> Arrays.stream(assetState.getPath())).toArray(String[]::new);
             for (RulesEngine<?> rulesEngine : getEnginesInScope(realm, assetPaths)) {
-                rulesEngine.fireAllDeploymentsWithPredictedData();
+                rulesEngine.scheduleFire(false);
             }
         }
     }
